--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Title for now</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/master.css" media="screen" title="no title">
 
@@ -11,6 +12,28 @@
 
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="nav-wrapper">
+          <a class="brand-logo center">Title</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="pull-down">
+        
+      </div>
+      <div class="background">
 
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="footer-copyright">
+        <div class="container">
+          © 2014 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">about</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
