close #3 Add general layout for input

--- a/index.html
+++ b/index.html
@@ -20,11 +20,32 @@
       </nav>
     </header>
     <main>
-      <div class="pull-down">
-        
-      </div>
-      <div class="background">
+      <div class="pull-down z-depth-2 white row">
+        <div class="container">
+          <h3 class="center-align">Configuration</h3>
+          <p class="center-align">
+            A quick description of how this works
+          </p>
+          <div class="row">
+            <div class="col s6 row">
+              <h6>How many decks of card?</h6>
+              <div class="col s6">
+                <input type="number" name="name" value="">
+                <label for=""></label>
+              </div>
+              <div class="col s6">
+                <button class="btn" type="submit" name="button">submit</button>
+              </div>
+            </div>
+            <div class="col s6">
 
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="container">
+        <h3>Calculate</h3>
       </div>
     </main>
     <footer class="page-footer">
