--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </p>
           <div class="row">
             <div class="col s6 row">
-              <h6>How many decks of card?</h6>
+              <h6>1: How many decks of card?</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
                 <label for=""></label>
@@ -37,8 +37,45 @@
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6">
-
+            <div class="col s6 row">
+              <h6>2: </h6>
+              <div class="col s6">
+                <input type="number" name="name" value="">
+                <label for=""></label>
+              </div>
+              <div class="col s6">
+                <button class="btn" type="submit" name="button">submit</button>
+              </div>
+            </div>
+            <div class="col s6 row">
+              <h6>3: </h6>
+              <div class="col s6">
+                <input type="number" name="name" value="">
+                <label for=""></label>
+              </div>
+              <div class="col s6">
+                <button class="btn" type="submit" name="button">submit</button>
+              </div>
+            </div>
+            <div class="col s6 row">
+              <h6>4: </h6>
+              <div class="col s6">
+                <input type="number" name="name" value="">
+                <label for=""></label>
+              </div>
+              <div class="col s6">
+                <button class="btn" type="submit" name="button">submit</button>
+              </div>
+            </div>
+            <div class="col s6 row">
+              <h6>5: </h6>
+              <div class="col s6">
+                <input type="number" name="name" value="">
+                <label for=""></label>
+              </div>
+              <div class="col s6">
+                <button class="btn" type="submit" name="button">submit</button>
+              </div>
             </div>
           </div>
 
