--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/master.css" media="screen" title="no title">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script src="assets/js/index.js" charset="utf-8"></script>
+    <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script defer src="assets/js/index.js" charset="utf-8"></script>
 
   </head>
   <body>
@@ -26,7 +27,7 @@
           <p class="center-align">
             A quick description of how this works
           </p>
-          <div class="row">
+          <div class="row question-field">
             <div class="col s6 row">
               <h6>1: How many decks of card?</h6>
               <div class="col s6">
@@ -38,7 +39,7 @@
               </div>
             </div>
             <div class="col s6 row">
-              <h6>2: </h6>
+              <h6>2: This question is a bit longer because I want to test layouts. One more sentence for the sake of lengthening this part.</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
                 <label for=""></label>
@@ -78,7 +79,7 @@
               </div>
             </div>
           </div>
-
+          <button id="submit-input" class="btn" type="submit">Ready?</button>
         </div>
       </div>
       <div class="container">
