--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
               </div>
             </div>
           </div>
-          <button id="submit-input" class="btn" type="submit">Ready?</button>
+          <div class="row">
+            <div class="center-align">
+              <button id="submit-input" class="btn" type="submit">Ready?</button>
+          </div>
+          </div>
         </div>
       </div>
       <div class="container">
