close #5 Add slide movement for input area

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main>
-      <div class="pull-down z-depth-2 white row">
+      <div id="input" class="pull-down z-depth-2 white row">
         <div class="container">
           <h3 class="center-align">Configuration</h3>
           <p class="center-align">
