close #5 Add slide movement for input area

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             A quick description of how this works
           </p>
           <div class="row question-field">
-            <div class="col s6 row">
+            <div class="col s6 row current">
               <h6>1: How many decks of card?</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
