close #6 Add question fade in, fade out functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="deep-purple">
         <div class="nav-wrapper">
           <a class="brand-logo center">Title</a>
         </div>
@@ -38,7 +38,7 @@
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6 row">
+            <div class="col s6 row hide">
               <h6>2: This question is a bit longer because I want to test layouts. One more sentence for the sake of lengthening this part.</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
@@ -48,7 +48,7 @@
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6 row">
+            <div class="col s6 row hide">
               <h6>3: </h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
@@ -58,7 +58,7 @@
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6 row">
+            <div class="col s6 row hide">
               <h6>4: </h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
@@ -68,7 +68,7 @@
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6 row">
+            <div class="col s6 row hide">
               <h6>5: </h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
@@ -81,7 +81,7 @@
           </div>
           <div class="row">
             <div class="center-align">
-              <button id="submit-input" class="btn" type="submit">Ready?</button>
+              <button id="submit-input" class="btn" type="button">Ready?</button>
           </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
         <h3>Calculate</h3>
       </div>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer deep-purple">
       <div class="footer-copyright">
         <div class="container">
           © 2014 Copyright Text
