--- a/index.html
+++ b/index.html
@@ -86,8 +86,26 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <h3>Calculate</h3>
+      <div class="row">
+        <div class="col s12 offset-m1 m10">
+          <div class="row">
+            <h3>Calculated Probability</h3>
+          </div>
+          <div class="row">
+            <h3>Observed Probability</h3>
+            <div class="container row">
+              <div class="col s2">
+                <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
+              </div>
+              <div class="col s3">
+
+              </div>
+              <div class="col s7">
+
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="page-footer deep-purple">
