--- a/index.html
+++ b/index.html
@@ -94,14 +94,24 @@
           <div class="row">
             <h3>Observed Probability</h3>
             <div class="container row">
-              <div class="col s2">
+              <div id="card-image" class="col s3">
                 <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
               </div>
               <div class="col s3">
 
               </div>
-              <div class="col s7">
+              <div class="col s6">
+                <div class="">
+                  <h6>Occurance:</h6>
 
+                </div>
+                <div class="">
+                  <h6>Total run:</h6>
+
+                </div>
+                <div class="right-align">
+
+                </div>
               </div>
             </div>
           </div>
