#11 Fix conflict with slide up

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <h3 class="center-align">Configuration</h3>
           <p class="center-align">
-            A quick description of how this works
+            [A quick description of how this works]
           </p>
           <div class="row question-field">
             <div class="col s6 row current">
@@ -98,7 +98,8 @@
                 <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
               </div>
               <div class="col s3">
-
+                <h6>Controls</h6>
+                <!-- control buttons -->
               </div>
               <div class="col s6">
                 <div class="">
@@ -114,6 +115,10 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="row">
+            <!-- reset button -->
+            <!-- run again button -->
           </div>
         </div>
       </div>
