--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
               </div>
               <div class="col s3">
-                <h6>Controls</h6>
+                <h5>Controls</h5>
+                <p class="range-field">
+                  <label for="">Speed</label>
+                  <input type="range" name="name" value="1000" max="5000" min="250">
+                </p>
                 <!-- control buttons -->
               </div>
               <div class="col s6">
