--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </div>
             </div>
             <div class="col s6 row hide">
-              <h6>2: This question is a bit longer because I want to test layouts. One more sentence for the sake of lengthening this part.</h6>
+              <h6>2: Drawing how many cards?</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
                 <label for=""></label>
@@ -49,7 +49,7 @@
               </div>
             </div>
             <div class="col s6 row hide">
-              <h6>3: </h6>
+              <h6>3: What are the rules?</h6>
               <div class="col s6">
                 <input type="number" name="name" value="">
                 <label for=""></label>
