close #9 Add results page layout

--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
         <div class="col s12 offset-m1 m10">
           <div class="row">
             <h3>Calculated Probability</h3>
+            <div class="container row">
+              <div class="col s8">
+                Fractions fractions fractions
+              </div>
+              <div class="col s4">
+                <div class="right-align">
+                  fraction equals percentage
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
             <h3>Observed Probability</h3>
@@ -115,7 +125,7 @@
 
                 </div>
                 <div class="right-align">
-
+                  fraction equals percentage
                 </div>
               </div>
             </div>
