--- a/index.html
+++ b/index.html
@@ -30,34 +30,35 @@
           <div class="row question-field">
             <div class="col s6 row current">
               <h6>1: How many decks of card?</h6>
-              <div class="col s6 input-field">
+              <div class="col s8 input-field">
                 <input type="number" id="q1" value="">
                 <label for="q1"></label>
               </div>
-              <div class="col s6">
+              <div class="col s4">
                 <button class="btn" type="submit">submit</button>
               </div>
             </div>
             <div class="col s6 row hide">
               <h6>2: Drawing how many cards?</h6>
-              <div class="col s6 input-field">
+              <div class="col s8 input-field">
                 <input type="number" id="q2" value="">
                 <label for="q2"></label>
               </div>
-              <div class="col s6">
+              <div class="col s4">
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s12 row hide">
+            <div class="col s12 hide">
               <h6>3: What are the rules for the drawn cards?</h6>
-              <div class="col s3 input-field">
-                <select multiple class="rules-1">
-                  <option value="suit">suit</option>
-                  <option value="value">value</option>
-                </select>
-                <label>Choose suit, value or both</label>
-              </div>
-              <div class="col s9 input-field" id="rule-radio" class="rules-1">
+              <div class="row">
+                <div class="col s3 input-field">
+                  <select multiple class="rules-1">
+                    <option value="suit">suit</option>
+                    <option value="value">value</option>
+                  </select>
+                  <label>Choose suit, value or both</label>
+                </div>
+                <div class="col s9 input-field" id="rule-radio" class="rules-1">
                 <div>
                   <span>
                     <input name="suit" type="radio" class="filled-in" id="spade" value="S">
@@ -131,28 +132,31 @@
                   </span>
                 </div>
               </div>
-              <div class="col s12 center-align">
-                <button class="btn" type="submit" name="button">submit</button>
+              </div>
+              <div class="row">
+                <div class="col s12 center-align">
+                  <button class="btn" type="submit" name="button">submit</button>
+                </div>
               </div>
             </div>
             <div class="col s6 row hide">
               <h6>4: Run how many times?</h6>
-              <div class="col s6">
+              <div class="col s8">
                 <input type="number" name="name" value="">
                 <label for=""></label>
               </div>
-              <div class="col s6">
+              <div class="col s4">
                 <button class="btn" type="submit" name="button">submit</button>
               </div>
             </div>
-            <div class="col s6 row">
+            <div class="col s6 center-align">
               <button class="btn" type="button" name="reset">reset</button>
             </div>
           </div>
           <div class="row">
             <div class="center-align">
               <button class="btn" type="button" name="reset">reset</button>
-              <button id="submit-input" class="btn" type="button">Ready?</button>
+              <a href="#modal1" class="btn" type="button">Ready?</a>
             </div>
           </div>
         </div>
@@ -205,6 +209,16 @@
             <!-- reset button -->
             <!-- run again button -->
           </div>
+        </div>
+      </div>
+      <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h4>Confirmation</h4>
+          <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Reset</a>
+          <a id="submit-input" class="modal-action modal-close waves-effect waves-green btn-flat">Ready!</a>
         </div>
       </div>
     </main>
