--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
                 <div class="col s9 input-field" id="rule-radio" class="rules">
                   <div class="suits">
                     <span>
-                      <input disabled name="suit" type="radio" class="filled-in" id="spade" value="S">
+                      <input disabled name="suit" type="radio" class="filled-in" id="spade" value="SPADES">
                       <label for="spade">Spades</label>
                     </span>
                     <span>
-                      <input disabled name="suit"  type="radio" class="filled-in" id="heart" value="H">
+                      <input disabled name="suit"  type="radio" class="filled-in" id="heart" value="HEARTS">
                       <label for="heart">Hearts</label>
                     </span>
                     <span>
-                      <input disabled name="suit" type="radio" class="filled-in" id="club" value="C">
+                      <input disabled name="suit" type="radio" class="filled-in" id="club" value="CLUBS">
                       <label for="club">Clubs</label>
                     </span>
                     <span>
-                      <input disabled name="suit" type="radio" class="filled-in" id="diamond" value="D">
+                      <input disabled name="suit" type="radio" class="filled-in" id="diamond" value="DIAMONDS">
                       <label for="diamond">Diamonds</label>
                     </span>
                   </div>
                   <div class="values">
                     <span>
-                      <input disabled name="value" type="radio" class="filled-in" id="ace" value="A">
+                      <input disabled name="value" type="radio" class="filled-in" id="ace" value="ACE">
                       <label for="ace">A</label>
                     </span>
                     <span>
@@ -120,15 +120,15 @@
                       <label for="ten">10</label>
                     </span>
                     <span>
-                      <input disabled name="value" type="radio" class="filled-in" id="jack" value="J">
+                      <input disabled name="value" type="radio" class="filled-in" id="jack" value="JACK">
                       <label for="jack">J</label>
                     </span>
                     <span>
-                      <input disabled name="value" type="radio" class="filled-in" id="queen" value="Q">
+                      <input disabled name="value" type="radio" class="filled-in" id="queen" value="QUEEN">
                       <label for="queen">Q</label>
                     </span>
                     <span>
-                      <input disabled name="value" type="radio" class="filled-in" id="king" value="K">
+                      <input disabled name="value" type="radio" class="filled-in" id="king" value="KING">
                       <label for="king">K</label>
                     </span>
                   </div>
@@ -142,8 +142,8 @@
             </div>
             <div class="col s6 row hide">
               <h6>4: Run how many times?</h6>
-              <div class="col s8">
-                <input type="number" name="name" value="">
+              <div class="col s8 input-field">
+                <input type="number" id="q4" value="">
                 <label for=""></label>
               </div>
               <div class="col s4">
