close #20 Add start/pause

--- a/index.html
+++ b/index.html
@@ -183,12 +183,17 @@
               <div id="card-image" class="col s3">
                 <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
               </div>
-              <div class="col s3">
-                <h5>Controls</h5>
+              <div class="col s3 control-inputs">
+                <h6>Controls:</h6>
                 <p class="range-field">
                   <label for="">Speed</label>
                   <input type="range" name="name" value="1000" max="5000" min="250">
                 </p>
+                <div class="center-align">
+                  <button class="btn" type="button" name="start">start</button>
+                  <button class="hide btn" type="button" name="pause">pause</button>
+                  <button class="btn" type="button" name="finish">finish</button>
+                </div>
                 <!-- control buttons -->
               </div>
               <div class="col s6">
