close #16 Add card rendering

--- a/index.html
+++ b/index.html
@@ -198,15 +198,14 @@
               </div>
               <div class="col s6">
                 <div class="">
-                  <h6>Occurance:</h6>
-
+                  <h6>Occurance: <span class="mes-oc"></span></h6>
                 </div>
                 <div class="">
-                  <h6>Total run:</h6>
+                  <h6>Total run: <span class="mes-to"></span></h6>
 
                 </div>
                 <div class="right-align">
-                  fraction equals percentage
+                  <span class="mes-oc"></span> / <span class="mes-to"></span> = <span class="mes-pr"></span>%
                 </div>
               </div>
             </div>
