--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
             <h3>Calculated Probability</h3>
             <div class="container row">
               <div class="col s8">
-                Fractions fractions fractions
+                <h5 id="calculation"></h5>
               </div>
               <div class="col s4">
                 <div class="right-align">
-                  fraction equals percentage
+                  <h5 id="calc-prob">
+
+                  </h5>
                 </div>
               </div>
             </div>
@@ -194,7 +196,6 @@
                   <button class="hide btn" type="button" name="pause">pause</button>
                   <button class="btn" type="button" name="finish">finish</button>
                 </div>
-                <!-- control buttons -->
               </div>
               <div class="col s6">
                 <div class="">
@@ -202,10 +203,11 @@
                 </div>
                 <div class="">
                   <h6>Total run: <span class="mes-to"></span></h6>
-
                 </div>
                 <div class="right-align">
-                  <span class="mes-oc"></span> / <span class="mes-to"></span> = <span class="mes-pr"></span>%
+                  <h5>
+                    <span class="mes-oc"></span> / <span class="mes-to"></span> = <span class="mes-pr"></span>%
+                  </h5>
                 </div>
               </div>
             </div>
