--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="row">
             <div class="center-align">
               <button class="btn" type="button" name="reset">reset</button>
-              <a href="#modal1" class="btn" type="button">Ready?</a>
+              <a id="modal-btn1" href="#modal1" class="btn">Ready?</a>
             </div>
           </div>
         </div>
@@ -221,7 +221,9 @@
       <div id="modal1" class="modal">
         <div class="modal-content">
           <h4>Confirmation</h4>
-          <p>A bunch of text</p>
+          <p>Setting up the following:</p>
+          <ul class="modal-rules">
+          </ul>
         </div>
         <div class="modal-footer">
           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Reset</a>
