close #27 Fix to stop at specified limits of run

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </p>
                 <div class="center-align">
                   <button class="btn" type="button" name="start">start</button>
-                  <button class="hide btn" type="button" name="pause">pause</button>
+                  <button class="hide btn red" type="button" name="pause">pause</button>
                   <button class="btn" type="button" name="finish">finish</button>
                 </div>
               </div>
