close #21 Add slider control

--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
       <div class="row">
         <div class="col s12 offset-m1 m10">
           <div class="row">
+            <h5 id="rule-page" class="center-align"></h5>
+          </div>
+          <div class="row">
             <h3>Calculated Probability</h3>
             <div class="container row">
               <div class="col s8">
@@ -188,8 +191,8 @@
               <div class="col s3 control-inputs">
                 <h6>Controls:</h6>
                 <p class="range-field">
-                  <label for="">Speed</label>
-                  <input type="range" name="name" value="1000" max="5000" min="250">
+                  <label for="">Speed (sec)</label>
+                  <input type="range" id="speed" value="1" max="1.5" min=".25" step=".25">
                 </p>
                 <div class="center-align">
                   <button class="btn" type="button" name="start">start</button>
