close #28 Add progress bar for total runs

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
                     <span class="mes-oc"></span> / <span class="mes-to"></span> = <span class="mes-pr"></span>%
                   </h5>
                 </div>
+                <div class="progress">
+                  <div id="progress" class="determinate" style="width: 0%"></div>
+                </div>
               </div>
             </div>
           </div>
