#22 add recurring mathjax, most likely will be dropped

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <h6>Total run: <span class="mes-to"></span></h6>
                 </div>
                 <div class="right-align">
-                  <h5 id="mes-prob"></h5>
+                  <h5 id="mes-prob" style="visibility:hidden"></h5>
                 </div>
                 <div class="progress">
                   <div id="progress" class="determinate" style="width: 0%"></div>
