Simplify input form

--- a/index.html
+++ b/index.html
@@ -28,28 +28,8 @@
             [A quick description of how this works]
           </p>
           <div class="row question-field">
-            <div class="col s6 row current">
-              <h6>1: How many decks of card?</h6>
-              <div class="col s8 input-field">
-                <input type="number" id="q1" value="">
-                <label for="q1"></label>
-              </div>
-              <div class="col s4">
-                <button class="btn" type="submit">submit</button>
-              </div>
-            </div>
-            <div class="col s6 row hide">
-              <h6>2: Drawing how many cards?</h6>
-              <div class="col s8 input-field">
-                <input type="number" id="q2" value="">
-                <label for="q2"></label>
-              </div>
-              <div class="col s4">
-                <button class="btn" type="submit" name="button">submit</button>
-              </div>
-            </div>
-            <div class="col s12 hide">
-              <h6>3: What are the rules for the drawn cards?</h6>
+            <div class="col s12 current">
+              <h6>What are the rules for the drawn cards?</h6>
               <div class="row">
                 <div class="col s3 input-field">
                   <select multiple class="rules">
@@ -140,18 +120,15 @@
                 </div>
               </div>
             </div>
-            <div class="col s6 row hide">
-              <h6>4: Run how many times?</h6>
+            <div class="col s6 row grey-text">
+              <h6>Run how many times?</h6>
               <div class="col s8 input-field">
-                <input type="number" id="q4" value="">
-                <label for="q4"></label>
+                <input type="number" id="repeats" value="" disabled>
+                <label for="repeats"></label>
               </div>
               <div class="col s4">
-                <button class="btn" type="submit" name="button">submit</button>
+                <button class="btn hide" type="submit" name="button">submit</button>
               </div>
-            </div>
-            <div class="col s6 center-align">
-              <button class="reset btn" type="button">reset</button>
             </div>
           </div>
           <div class="row">
