close #25 Clean up buttons

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <label for="repeats"></label>
               </div>
               <div class="col s4">
-                <button class="btn hide" type="submit" name="button">submit</button>
+                <button class="btn hide last-btn" type="submit" name="button">submit</button>
               </div>
             </div>
           </div>
-          <div class="row">
+          <div id="submit-buttons" class="row hide">
             <div class="center-align">
               <button class="reset btn" type="button">reset</button>
               <a id="modal-btn1" href="#modal1" class="btn">Ready?</a>
