close #33 Fix modal text

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="col s3 control-inputs">
                 <h6>Controls:</h6>
                 <p class="range-field">
-                  <label for="speed">Speed (sec)</label>
+                  <label for="speed">Interval (sec)</label>
                   <input type="range" id="speed" value="1" max="1.5" min="0.25" step="0.25">
                 </p>
                 <div class="center-align">
@@ -126,7 +126,7 @@
       <div id="modal1" class="modal">
         <div class="modal-content">
           <h4>Confirmation</h4>
-          <p>Setting up the following:</p>
+          <h5>Setting up the following:</h5>
           <ul class="modal-rules">
           </ul>
         </div>
