--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
               </div>
               <div class="row">
                 <div class="col s12 center-align">
-                  <button class="btn" type="submit" name="button">submit</button>
+                  <button class="btn" type="submit" name="button">next</button>
                 </div>
               </div>
             </div>
             <div class="col s6 row grey-text">
               <h5>Run how many times?</h5>
               <div class="col s8 input-field">
-                <input type="number" id="repeats" value="" disabled>
+                <input type="number" id="repeats" value="" disabled placeholder="(max: 100,000)">
                 <label for="repeats"></label>
               </div>
               <div class="col s4">
-                <button class="btn hide last-btn" type="submit" name="button">submit</button>
+                <button class="btn hide last-btn" type="submit" name="button">next</button>
               </div>
             </div>
           </div>
