close #37 Add next card button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script defer src="assets/js/data.js" charset="utf-8"></script>
-    <script defer src="assets/js/or-condition.js" charset="utf-8"></script>
+    <script defer src="assets/js/input-gen.js" charset="utf-8"></script>
     <script defer src="assets/js/index.js" charset="utf-8"></script>
   </head>
   <body>
@@ -92,9 +92,10 @@
                   <input type="range" id="speed" value="1" max="1.5" min="0.25" step="0.25">
                 </p>
                 <div class="center-align">
-                  <button class="btn" type="button" name="start">start</button>
-                  <button class="hide btn red" type="button" name="pause">pause</button>
-                  <button class="btn" type="button" name="finish">finish</button>
+                  <button class="btn" name="start">start</button>
+                  <button class="hide btn red" name="pause">pause</button>
+                  <button class="btn" name="next">next card</button>
+                  <button class="btn" name="finish">finish</button>
                 </div>
               </div>
               <div class="col s6">
