close #26 Add preview display of rules

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script defer src="assets/js/data.js" charset="utf-8"></script>
+    <script defer src="assets/js/grid.js" charset="utf-8"></script>
     <script defer src="assets/js/input-gen.js" charset="utf-8"></script>
     <script defer src="assets/js/index.js" charset="utf-8"></script>
   </head>
@@ -41,6 +42,9 @@
                   <button class="btn" type="submit" name="button">next</button>
                 </div>
               </div>
+            </div>
+            <div id="preview-grid" class="col s6">
+
             </div>
             <div class="col s6 row grey-text">
               <h5>Run how many times?</h5>
